--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Responsive galery</title>
+    <title>Portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,500,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 <!--    style responsywne-->
@@ -15,35 +16,24 @@
 </head>
 
 <body>
-    <section id="gallery">
-        <header>
-            <h2>Moja galeria</h2>
-            <p>Najnowsze prace</p>
+        <menu id="menu">
+            <ul>
+                <li class="menu">o mnie</li>
+                <li class="menu">umiejętności</li>
+                <li class="menu">portfolio</li>
+                <li class="menu">kontakt</li>
+            </ul>
+            
+        </menu>
+       <header>
+           <h1 id="Name">Janusz <span style="color:#1ac056">Kowalski</span></h1>
+            <h2 id="FED">Front-End Developer</h2>
         </header>
-        <figure class="box">
-            <img src="img/image1.jpg" alt="image 1">
-            <figcaption>Obraz 1.</figcaption>
-        </figure>
-        <figure class="box">
-            <img src="img/image2.jpg" alt="image 2">
-            <figcaption>Obraz 2.</figcaption>
-        </figure>
-        <figure class="box">
-            <img src="img/image3.jpg" alt="image 3">
-            <figcaption>Obraz 3.</figcaption>
-        </figure>
-        <figure class="box">
-            <img src="img/image4.jpg" alt="image 4">
-            <figcaption>Obraz 4.</figcaption>
-        </figure>
-        <figure class="box">
-            <img src="img/image5.jpg" alt="image 5">
-            <figcaption>Obraz 5.</figcaption>
-        </figure>
-        <figure class="box">
-            <img src="img/image6.jpg" alt="image 6">
-            <figcaption>Obraz 6.</figcaption>
-        </figure>
+        
+    <section id="about">
+        <h2 id="abouth2">O <span style="color:#1ac056">mnie</span></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+  <figure id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
     </section>
 </body>
 
