--- a/index.html
+++ b/index.html
@@ -31,9 +31,26 @@
         </header>
         
     <section id="about">
-        <h2 id="abouth2">O <span style="color:#1ac056">mnie</span></h2>
+         <h2 id="abouth2">O <span style="color:#1ac056">mnie</span></h2>
+         <container>
+         <figure id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p></container>
+    </section>
+    <section id="skill">
+         <h2 id="skillh2">Moje <span style="color:#1ac056">umiejętności</span></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
-  <figure id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
+        <figure class="logo"><img src="icons/css3.png" alt="">
+        <figcaption>CSS3</figcaption>
+        </figure>
+        <figure class="logo"><img src="icons/html5.png" alt="">
+         <figcaption>HTML5</figcaption>
+        </figure>
+        <figure class="logo"><img src="icons/jquery.png" alt="">
+         <figcaption>jQuery</figcaption>
+        </figure>
+        <figure class="logo"><img src="icons/js.png" alt="">
+         <figcaption>JavaScript</figcaption>
+        </figure>
     </section>
 </body>
 
