--- a/index.html
+++ b/index.html
@@ -9,47 +9,61 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,500,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
-<!--    style responsywne-->
+    <!--    style responsywne-->
     <link rel="stylesheet" href="css/responsive.css">
-<!--     sprawia że lepiej strona wygląda na urządzeniach mobilnych-->
+    <!--     sprawia że lepiej strona wygląda na urządzeniach mobilnych-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-        <menu id="menu">
-            <ul>
-                <li class="menu">o mnie</li>
-                <li class="menu">umiejętności</li>
-                <li class="menu">portfolio</li>
-                <li class="menu">kontakt</li>
-            </ul>
-            
-        </menu>
-       <header>
-           <h1 id="Name">Janusz <span style="color:#1ac056">Kowalski</span></h1>
+    <!--   Main navigation-->
+    <nav id="menu">
+        <ul>
+            <li class="menu"><a href="">o mnie</a></li>
+            <li class="menu"><a href="">umiejetności</a></li>
+            <li class="menu"><a href="">portfolio</a></li>
+            <li class="menu"><a href="">kontakt</a></li>
+        </ul>
+
+    </nav>
+    <header>
+        <div class="mainheader">
+            <h1 id="Name">Janusz <span style="font-weight: 500"><span style="color:#1ac056" >Kowalski</span></span>
+            </h1>
             <h2 id="FED">Front-End Developer</h2>
-        </header>
-        
+        </div>
+    </header>
+
     <section id="about">
-         <h2 id="abouth2">O <span style="color:#1ac056">mnie</span></h2>
-         <container>
-         <figure id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p></container>
+        <div id="abouth2">    <h2 >O <span style="color:#1ac056">mnie</span></h2></div>
+             <figure class="abouttext" id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
+            <article class="abouttext lorem"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p></article>
     </section>
     <section id="skill">
-         <h2 id="skillh2">Moje <span style="color:#1ac056">umiejętności</span></h2>
+        <h2 id="skillh2">Moje <span style="color:#1ac056">umiejętności</span></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
         <figure class="logo"><img src="icons/css3.png" alt="">
-        <figcaption>CSS3</figcaption>
+            <figcaption>CSS3</figcaption>
         </figure>
         <figure class="logo"><img src="icons/html5.png" alt="">
-         <figcaption>HTML5</figcaption>
+            <figcaption>HTML5</figcaption>
         </figure>
         <figure class="logo"><img src="icons/jquery.png" alt="">
-         <figcaption>jQuery</figcaption>
+            <figcaption>jQuery</figcaption>
         </figure>
         <figure class="logo"><img src="icons/js.png" alt="">
-         <figcaption>JavaScript</figcaption>
+            <figcaption>JavaScript</figcaption>
+        </figure>
+    </section>
+    <section id="portfolio">
+        <h2 id="portfolioh2">Moje <span style="color:#1ac056">portfolio</span></h2>
+        <figure class="port" id="port1">
+        </figure>
+        <figure class="port" id="port2"><div class="portfoliotext">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+        </div>
+        </figure>
+        <figure class="port" id="port3">
         </figure>
     </section>
 </body>
