stan na koniec 1012

--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
         <figure class="port" id="port3">
         </figure>
     </section>
+    <section id="form">
+        <h2 id="formh2">Janusz <span style="color:#1ac056">Nowak</span></h2>
+        <div class="form">
+            ul. Mostowa6/13<br>
+            31-061 Kraków <br>
+            <br>
+            tel. 606 332 234<br>
+            e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a>
+        </div>
+        <div class="form">
+            <form action="">
+                <input type="text">
+                <input type="email">
+                <input type="text">
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
