--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <section id="skill">
         <h2 id="skillh2">Moje <span style="color:#1ac056">umiejętności</span></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
-        <figure class="logo"><img src="icons/css3.png" alt="">
+<!--       Wpisujemy alty bo pomaga przy pozycjonowaniu itd-->
+            <figure class="logo"><img src="icons/css3.png" alt="">
             <figcaption>CSS3</figcaption>
         </figure>
         <figure class="logo"><img src="icons/html5.png" alt="">
@@ -58,12 +59,18 @@
     <section id="portfolio">
         <h2 id="portfolioh2">Moje <span style="color:#1ac056">portfolio</span></h2>
         <figure class="port" id="port1">
+        <div class="portfoliotext">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+        </div>
         </figure>
         <figure class="port" id="port2"><div class="portfoliotext">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
         </div>
         </figure>
         <figure class="port" id="port3">
+        <div class="portfoliotext">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+        </div>
         </figure>
     </section>
     <section id="form">
@@ -73,13 +80,24 @@
             31-061 Kraków <br>
             <br>
             tel. 606 332 234<br>
-            e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a>
+            e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a><br>
+            
+            <figure class="logo"><img src="icons/face.svg" alt="">
+            <figcaption>HTML5</figcaption>
+        </figure>
+        <figure class="logo"><img src="icons/twit.svg" alt="">
+            <figcaption>jQuery</figcaption>
+        </figure>
+        <figure class="logo"><img src="icons/skype.svg" alt="">
+            <figcaption>JavaScript</figcaption>
+        </figure>
         </div>
         <div class="form">
             <form action="">
-                <input type="text">
-                <input type="email">
-                <input type="text">
+                <input type="text" placeholder="Imię i Nazwisko">
+                <input type="email" placeholder="Adres email">
+                <textarea  placeholder="Treść Wiadomości"></textarea><br>
+                <input type="submit" value="Wyślij">
             </form>
         </div>
     </section>
