--- a/index.html
+++ b/index.html
@@ -35,15 +35,19 @@
     </header>
 
     <section id="about">
-        <div id="abouth2">    <h2 >O <span style="color:#1ac056">mnie</span></h2></div>
-             <figure class="abouttext" id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
-            <article class="abouttext lorem"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p></article>
+        <div id="abouth2">
+            <h2>O <span style="color:#1ac056">mnie</span></h2>
+        </div>
+        <figure class="abouttext" id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
+        <article class="abouttext lorem">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit unde, voluptates eveniet, blanditiis doloremque perspiciatis alias possimus ea deserunt adipisci impedit dolor. Minus quo quia ipsum inventore optio unde nostrum similique odit qui sunt cumque molestiae maiores voluptatum molestias blanditiis quos, tempore! Sunt ipsa nobis odio blanditiis assumenda quos porro quia! Nostrum sed omnis, laboriosam quidem molestiae pariatur modi amet, nesciunt quo et totam asperiores dolores expedita blanditiis ab optio cumque nisi culpa, voluptas sint. Deleniti culpa adipisci nihil, iusto cumque. Nobis ad dolore veniam, molestias perspiciatis assumenda eaque eos veritatis praesentium cum itaque, impedit nesciunt excepturi officiis voluptas laboriosam.</p>
+        </article>
     </section>
     <section id="skill">
         <h2 id="skillh2">Moje <span style="color:#1ac056">umiejętności</span></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
-<!--       Wpisujemy alty bo pomaga przy pozycjonowaniu itd-->
-            <figure class="logo"><img src="icons/css3.png" alt="">
+        <!--       Wpisujemy alty bo pomaga przy pozycjonowaniu itd-->
+        <figure class="logo"><img src="icons/css3.png" alt="">
             <figcaption>CSS3</figcaption>
         </figure>
         <figure class="logo"><img src="icons/html5.png" alt="">
@@ -59,44 +63,42 @@
     <section id="portfolio">
         <h2 id="portfolioh2">Moje <span style="color:#1ac056">portfolio</span></h2>
         <figure class="port" id="port1">
-        <div class="portfoliotext">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
-        </div>
+            <div class="portfoliotext">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+            </div>
         </figure>
-        <figure class="port" id="port2"><div class="portfoliotext">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
-        </div>
+        <figure class="port" id="port2">
+            <div class="portfoliotext">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+            </div>
         </figure>
         <figure class="port" id="port3">
-        <div class="portfoliotext">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
-        </div>
+            <div class="portfoliotext">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+            </div>
         </figure>
     </section>
     <section id="form">
         <h2 id="formh2">Janusz <span style="color:#1ac056">Nowak</span></h2>
         <div class="form">
-            ul. Mostowa6/13<br>
-            31-061 Kraków <br>
-            <br>
-            tel. 606 332 234<br>
-            e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a><br>
-            
-            <figure class="logo"><img src="icons/face.svg" alt="">
-            <figcaption>HTML5</figcaption>
-        </figure>
-        <figure class="logo"><img src="icons/twit.svg" alt="">
-            <figcaption>jQuery</figcaption>
-        </figure>
-        <figure class="logo"><img src="icons/skype.svg" alt="">
-            <figcaption>JavaScript</figcaption>
-        </figure>
+            ul. Mostowa6/13<br> 31-061 Kraków <br>
+            <br> tel. 606 332 234<br> e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a><br>
+
+            <figure class="social"><img src="icons/face.svg" alt="">
+
+            </figure>
+            <figure class="social"><img src="icons/twit.svg" alt="">
+
+            </figure>
+            <figure class="social"><img src="icons/skype.svg" alt="">
+
+            </figure>
         </div>
         <div class="form">
             <form action="">
                 <input type="text" placeholder="Imię i Nazwisko">
                 <input type="email" placeholder="Adres email">
-                <textarea  placeholder="Treść Wiadomości"></textarea><br>
+                <textarea placeholder="Treść Wiadomości"></textarea><br>
                 <input type="submit" value="Wyślij">
             </form>
         </div>
