--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!--     sprawia że lepiej strona wygląda na urządzeniach mobilnych-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
 <body>
@@ -26,25 +27,25 @@
         </ul>
 
     </nav>
-    <header>
-        <div class="mainheader">
-            <h1 id="Name">Janusz <span style="font-weight: 500"><span style="color:#1ac056" >Kowalski</span></span>
+    <header class="front-header">
+        <div class="main-header">
+            <h1 id="Name">Janusz <span style="font-weight: 500"><span>Kowalski</span></span>
             </h1>
             <h2 id="FED">Front-End Developer</h2>
         </div>
     </header>
 
     <section id="about">
-        <div id="abouth2">
+        <header id="about-header">
             <h2>O <span style="color:#1ac056">mnie</span></h2>
-        </div>
-        <figure class="abouttext" id="jn"><img src="img/jan-nowak.jpg" alt="jan"></figure>
-        <article class="abouttext lorem">
+        </header>
+        <figure class="about-text" id="about-img"><img src="img/jan-nowak.jpg" alt="jan"></figure>
+        <article class="about-text lorem">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit unde, voluptates eveniet, blanditiis doloremque perspiciatis alias possimus ea deserunt adipisci impedit dolor. Minus quo quia ipsum inventore optio unde nostrum similique odit qui sunt cumque molestiae maiores voluptatum molestias blanditiis quos, tempore! Sunt ipsa nobis odio blanditiis assumenda quos porro quia! Nostrum sed omnis, laboriosam quidem molestiae pariatur modi amet, nesciunt quo et totam asperiores dolores expedita blanditiis ab optio cumque nisi culpa, voluptas sint. Deleniti culpa adipisci nihil, iusto cumque. Nobis ad dolore veniam, molestias perspiciatis assumenda eaque eos veritatis praesentium cum itaque, impedit nesciunt excepturi officiis voluptas laboriosam.</p>
         </article>
     </section>
     <section id="skill">
-        <h2 id="skillh2">Moje <span style="color:#1ac056">umiejętności</span></h2>
+        <h2 id="skill-header">Moje <span>umiejętności</span></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
         <!--       Wpisujemy alty bo pomaga przy pozycjonowaniu itd-->
         <figure class="logo"><img src="icons/css3.png" alt="">
@@ -61,48 +62,84 @@
         </figure>
     </section>
     <section id="portfolio">
-        <h2 id="portfolioh2">Moje <span style="color:#1ac056">portfolio</span></h2>
-        <figure class="port" id="port1">
-            <div class="portfoliotext">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+        <h2 id="portfolio-header">Moje <span>portfolio</span></h2>
+        <figure class="portfolio-boxes" id="portfolio-box1">
+            <div class="portfolio-text">
+                <article>
+                    <div class="article-inner">
+                        <h3>Lorem ipsum.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea</p>
+                        <p>Wykorzystane elementy:
+                            <p/>
+                            <p>HTML5 ,CSS3, Bootstrap, JavaScript</p>
+
+                            <i class="fa fa-link" aria-hidden="true"></i>
+                    </div>
+
+                </article>
             </div>
         </figure>
-        <figure class="port" id="port2">
-            <div class="portfoliotext">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+        <figure class="portfolio-boxes" id="portfolio-box2">
+            <div class="portfolio-text">
+                <article>
+                    <div class="article-inner">
+                        <h3>Lorem ipsum.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea</p>
+                        <p>Wykorzystane elementy:
+                            <p/>
+                            <p>HTML5 ,CSS3, Bootstrap, JavaScript</p>
+                            <i class="fa fa-link" aria-hidden="true"></i>
+                    </div>
+                </article>
             </div>
         </figure>
-        <figure class="port" id="port3">
-            <div class="portfoliotext">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea, voluptatem deleniti iste similique facere, sunt animi alias distinctio ipsam provident, ipsum quo vero accusantium?</p>
+        <figure class="portfolio-boxes" id="portfolio-box3">
+            <div class="portfolio-text">
+                <article>
+                    <div class="article-inner">
+                        <h3>Lorem ipsum.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ipsum, voluptate blanditiis expedita debitis provident eos aperiam odit pariatur perspiciatis non cupiditate quidem a, quo qui earum voluptas ducimus corrupti labore! Cum laborum earum ea</p>
+                        <p>Wykorzystane elementy:
+                            <p/>
+                            <p>HTML5 ,CSS3, Bootstrap, JavaScript</p>
+                            <i class="fa fa-link" aria-hidden="true"></i>
+                    </div>
+                </article>
             </div>
         </figure>
+        <!--        Sprawia że przy float elementy nie wypadają z sekcji-->
+        <div class="clear"></div>
     </section>
     <section id="form">
-        <h2 id="formh2">Janusz <span style="color:#1ac056">Nowak</span></h2>
-        <div class="form">
+        <h2 id="form-header">Janusz <span>Nowak</span></h2>
+        <adess class="form">
             ul. Mostowa6/13<br> 31-061 Kraków <br>
             <br> tel. 606 332 234<br> e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a><br>
+            <div id="social-logos">
+                <figure class="social"><img src="icons/face.svg" alt="">
 
-            <figure class="social"><img src="icons/face.svg" alt="">
+                </figure>
+                <figure class="social"><img src="icons/twit.svg" alt="">
 
-            </figure>
-            <figure class="social"><img src="icons/twit.svg" alt="">
+                </figure>
+                <figure class="social"><img src="icons/skype.svg" alt="">
 
-            </figure>
-            <figure class="social"><img src="icons/skype.svg" alt="">
-
-            </figure>
-        </div>
+                </figure>
+            </div>
+        </adess>
         <div class="form">
             <form action="">
                 <input type="text" placeholder="Imię i Nazwisko">
                 <input type="email" placeholder="Adres email">
                 <textarea placeholder="Treść Wiadomości"></textarea><br>
                 <input type="submit" value="Wyślij">
+                <div class="clear"></div>
             </form>
         </div>
     </section>
+    <footer>
+        <p>Copyright © Jan Nowak</p>
+    </footer>
 </body>
 
 </html>
