--- a/index.html
+++ b/index.html
@@ -116,13 +116,17 @@
             ul. Mostowa6/13<br> 31-061 Kraków <br>
             <br> tel. 606 332 234<br> e-mail: <a href="mailto:email@echoecho.com?subject=SweetWords">piotrax@wp.pl</a><br>
             <div id="social-logos">
-                <figure class="social"><img src="icons/face.svg" alt="">
+                <figure class="social"><a href=""><i class="fa fa-facebook-official" aria-hidden="true"></i>
+</a>
 
                 </figure>
-                <figure class="social"><img src="icons/twit.svg" alt="">
+                <figure class="social"><a href=""><i class="fa fa-google-plus-square" aria-hidden="true"></i>
+</a>
 
                 </figure>
-                <figure class="social"><img src="icons/skype.svg" alt="">
+                <figure class="social">
+                <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i>
+</a>
 
                 </figure>
             </div>
